--- a/css/content.css
+++ b/css/content.css
@@ -9,23 +9,23 @@
 .content-wrap.main{overflow:hidden; padding-bottom:7rem;}
 .inner-wrap.main-bn{display:flex; flex-direction:column; overflow:hidden; position:relative; height:84rem; padding:8rem 9.4rem 0; color:#fff; background:url(../images/common/img_main_bg.webp) center center / cover no-repeat;}
 
-.inner-wrap.main-bn .img-boy{display:block; position:absolute; right:-5.5rem; bottom:-8rem; width:36.2rem; scale:.7; z-index:1;}
+.inner-wrap.main-bn .img-boy{display:block; position:absolute; right:-5.5rem; bottom:-8rem; width:36.2rem; scale:.7; z-index:1; pointer-events:none;}
 
-.inner-wrap.main-bn .h2-title{margin-left:auto; padding-top:5rem; line-height:130%; font-size:6rem; letter-spacing:-1rem; font-family:var(--ff-mono); background:url(/images/common/icon_recycle.svg) left 34rem top no-repeat;}
+.inner-wrap.main-bn .h2-title{margin-left:auto; padding-top:5rem; line-height:130%; font-size:6rem; letter-spacing:-1rem; font-family:var(--ff-mono); background:url(../images/common/icon_recycle.svg) left 34rem top no-repeat;}
 .inner-wrap.main-bn .h2-title .toggle-grp{display:flex; overflow:hidden; height:4rem; margin-top:2rem; font-size:2rem; font-family:var(--ff-noto); background:rgba(0, 0, 0, 0.8); border-radius:2rem; border:.1rem solid #009BB4;}
 .inner-wrap.main-bn .h2-title .toggle-grp span{display:inline-block; width:100%; height:100%; color:#009BB4; font-weight:500; line-height:3.8rem; text-align:center; letter-spacing:0;}
 .inner-wrap.main-bn .h2-title .toggle-grp span.on{color:#fff; font-weight:700; background:#009BB4;}
 
 .slide-bn.swiper{width:144.5rem; margin-top:auto; margin-right:unset; padding-bottom:7rem;}
 .slide-bn.swiper .swiper-slide{width:auto;}
-.slide-bn.swiper .swiper-slide > a{display:inline-flex; gap:4rem; flex-wrap:wrap; justify-content:center; align-items:center; width:24rem; height:26.8rem; margin-top:4.2rem; padding:5rem 0; font-weight:700; font-size:2rem; background:url(/images/common/img_main_bn_bg.svg) center center / 100% no-repeat;}
+.slide-bn.swiper .swiper-slide > a{display:inline-flex; gap:4rem; flex-wrap:wrap; justify-content:center; align-items:center; width:24rem; height:26.8rem; margin-top:4.2rem; padding:5rem 0; font-weight:700; font-size:2rem; background:url(../images/common/img_main_bn_bg.svg) center center / 100% no-repeat;}
 .slide-bn.swiper .swiper-slide > a img{display:block; width:8rem;}
 .slide-bn.swiper .swiper-slide > a > p{display:block; width:100%; text-align:center;}
 .slide-bn.swiper .swiper-slide .top-msg{display:none; font-family:var(--ff-noto);}
 .slide-bn.swiper .swiper-slide .top-msg .first{font-weight:300; font-size:1.3rem;}
 .slide-bn.swiper .swiper-slide .top-msg .sec{font-weight:700; font-size:2.3rem;}
 .slide-bn.swiper .swiper-slide .top-msg .third{font-weight:400; font-size: 2.3rem;}
-.slide-bn.swiper .swiper-slide.swiper-slide-active > a{gap:3rem; width:38.9rem; height:31rem; margin-top:0; background-image: url(/images/common/img_main_bn_bg_on.svg);}
+.slide-bn.swiper .swiper-slide.swiper-slide-active > a{gap:3rem; width:38.9rem; height:31rem; margin-top:0; background-image: url(../images/common/img_main_bn_bg_on.svg);}
 .slide-bn.swiper .swiper-slide.swiper-slide-active > a > p{margin-top:3rem; font-size:3rem;}
 .slide-bn.swiper .swiper-slide.swiper-slide-active > a img{width:10rem;}
 
@@ -35,16 +35,16 @@
 .slide-bn.swiper .control01 .paging .max{margin-left:.5rem;}
 .slide-bn.swiper .control01 .btn-auto-play{display:flex; gap:1rem; align-items:center;}
 .slide-bn.swiper .control01 .btn-auto-play button{height:1.8rem; text-indent:-9999px; background-position:center center; background-size:100%; background-repeat:no-repeat;}
-.slide-bn.swiper .control01 .btn-auto-play button.btn-play{width:1.8rem; background-image:url(/images/common/icon_main_bn_play.svg);}
-.slide-bn.swiper .control01 .btn-auto-play button.btn-pause{width:1rem; background-image:url(/images/common/icon_main_bn_pause.svg);}
+.slide-bn.swiper .control01 .btn-auto-play button.btn-play{width:1.8rem; background-image:url(../images/common/icon_main_bn_play.svg);}
+.slide-bn.swiper .control01 .btn-auto-play button.btn-pause{width:1rem; background-image:url(../images/common/icon_main_bn_pause.svg);}
 .slide-bn.swiper .slidebar{top:2.2rem; left:13.6rem; width:calc(100% - 13.6rem); height:.1rem; background:#fff;}
 .slide-bn.swiper .slidebar .swiper-pagination-bullet{position:relative; top:-.5rem; height:1rem; margin:0; background:#fff; transition:all .3s; border-radius:0; opacity:0;}
 .slide-bn.swiper .slidebar .swiper-pagination-bullet.swiper-pagination-bullet-active{opacity:1;}
 .slide-bn.swiper .control02{position:absolute; bottom:1.5rem; width:100%; height:4.5rem;}
 .slide-bn.swiper .control02 .btn-grp{display:flex; gap:1.6rem; width:10.6rem;}
 .slide-bn.swiper .control02 .btn-grp button{display:inline-block; width:4.5rem; height:4.5rem; text-indent:-9999px; background-position:center center; background-size:100%; background-repeat:no-repeat;}
-.slide-bn.swiper .control02 .btn-grp button.btn-prev{background-image:url(/images/common/btn_bn_prev.svg);}
-.slide-bn.swiper .control02 .btn-grp button.btn-next{background-image:url(/images/common/btn_bn_next.svg);}
+.slide-bn.swiper .control02 .btn-grp button.btn-prev{background-image:url(../images/common/btn_bn_prev.svg);}
+.slide-bn.swiper .control02 .btn-grp button.btn-next{background-image:url(../images/common/btn_bn_next.svg);}
 .slide-bn.swiper .swiper-slide.swiper-slide-active .top-msg{display:block; position:absolute; top:.5rem; left:0; width:16rem; text-align:center;}
 .slide-bn.swiper .control01{position:absolute; top:0; right:0; z-index:1;}
 
@@ -72,7 +72,7 @@
 .inner-wrap.notice .data .tit{position:relative;}
 .inner-wrap.notice .data .tit h3{font-weight:700; font-size:3.6rem; line-height:130%; letter-spacing:-.7rem; font-family:var(--ff-mono);}
 .inner-wrap.notice .btn-more{display:inline-flex; gap:1rem; align-items:center; position:absolute; top:1rem; right:0; font-weight:500; font-size:1.6rem;}
-.inner-wrap.notice .btn-more .ico{width:3.5rem; height:3.5rem; background:url(/images/common/icon_btn_plus01.svg) center center / 100% no-repeat;}
+.inner-wrap.notice .btn-more .ico{width:3.5rem; height:3.5rem; background:url(../images/common/icon_btn_plus01.svg) center center / 100% no-repeat;}
 
 .inner-wrap.notice .data .cont{display:flex; gap:2.5rem; margin-top:1.5rem;}
 .inner-wrap.notice .data .cont li{width:40rem;}
@@ -88,7 +88,7 @@
 .inner-wrap.notice .noti-list > *{position:relative; z-index:1;}
 .inner-wrap.notice .noti-list .tit{position:relative; padding-bottom:2rem; color:#fff; border-bottom:.2rem solid #fff;}
 .inner-wrap.notice .noti-list .tit h3{font-weight:700; font-size:3.6rem; line-height:130%; letter-spacing:-.7rem; font-family:var(--ff-mono);}
-.inner-wrap.notice .btn-more .ico.icon-more2{background-image:url(/images/common/icon_btn_plus02.svg);}
+.inner-wrap.notice .btn-more .ico.icon-more2{background-image:url(../images/common/icon_btn_plus02.svg);}
 
 .inner-wrap.notice .cont ul li > a{display:flex; justify-content:space-between; align-items:center; padding:1.5rem 0; color:#fff; font-weight:500; line-height:3rem; font-size:2rem;}
 .inner-wrap.notice .cont ul li > a .date{flex:0 0 auto; font-weight:400; line-height:2.4rem; font-size:1.6rem;}
@@ -96,7 +96,7 @@
 .inner-wrap.notice .cont ul li + li > a{border-top:.1rem solid #fff;}
 .inner-wrap.notice .cont ul li > a > p{display:inline-block; overflow:hidden; width:calc(100% - 10rem); text-overflow:ellipsis; white-space:nowrap;}
 .inner-wrap.notice .cont ul + .btn-noti-bn{margin-top:4rem;}
-.btn-noti-bn{display:flex; flex-wrap:wrap; width:100%; height:18rem; padding:4.7rem 4.9rem; color:#fff; font-weight:700; line-height:130%; font-size:3.2rem; letter-spacing: -.7rem; font-family:var(--ff-mono); background:url(/images/common/img_noti_bn_bg.webp) center center / 100% 100% no-repeat; border-radius:1rem;}
+.btn-noti-bn{display:flex; flex-wrap:wrap; width:100%; height:18rem; padding:4.7rem 4.9rem; color:#fff; font-weight:700; line-height:130%; font-size:3.2rem; letter-spacing: -.7rem; font-family:var(--ff-mono); background:url(../images/common/img_noti_bn_bg.webp) center center / 100% 100% no-repeat; border-radius:1rem;}
 .btn-noti-bn .txt{width:100%;}
 .btn-noti-bn .badge{display:inline-flex; align-items:center; font-weight:400; margin-top:1.4rem; padding:.3rem 2.5rem; font-size:1.4rem; line-height:2.4rem; font-family:var(--ff-default); letter-spacing:0; border:.1rem solid #fff; border-radius:1.5rem;}
 
