--- a/css/common.css
+++ b/css/common.css
@@ -9,7 +9,7 @@ header{display:flex; align-items:center; height:12rem; padding:0 9rem; backgroun
 header .head-top .logo a{display:inline-flex; width:20rem; height:8.3rem; text-indent:-9999px; background:url(../images/common/icon_main_logo.svg) center center /  100% no-repeat;}
 header .head-inner{flex-grow:1; }
 header .head-inner nav{display:flex; justify-content:flex-end; gap:4rem; width:100%; margin-top:2rem;}
-header .head-inner nav .btn-mnu{display:inline-block; position:relative; top:1.9rem; width:1.8rem; height:1.6rem; text-indent:-9999px; background:url(/images/common/icon_menu_all.svg) center center / 100% no-repeat;}
+header .head-inner nav .btn-mnu{display:inline-block; position:relative; top:1.9rem; width:1.8rem; height:1.6rem; text-indent:-9999px; background:url(../images/common/icon_menu_all.svg) center center / 100% no-repeat;}
 
 
 
