--- a/css/content.css
+++ b/css/content.css
@@ -7,13 +7,29 @@
 
 /* main bn */
 .content-wrap.main{overflow:hidden; padding-bottom:7rem;}
-.inner-wrap.main-bn{display:flex; flex-direction:column; overflow:hidden; position:relative; height:84rem; padding:8rem 9.4rem 0; color:#fff; background:url(../images/common/img_main_bg.webp) center center / cover no-repeat;}
+.inner-wrap.main-bn{display:flex; flex-direction:column; overflow:hidden; position:relative; height:84rem; padding:8rem 9.4rem 0; color:#fff; background:transparent;}
+
+.inner-wrap.main-bn > *:not(.bg){position:relative; z-index:1;}
+.inner-wrap.main-bn .bg{position:absolute; inset:0; background-size:cover; opacity:0; animation:fadeSlide 12s infinite linear; z-index:0;}
+.inner-wrap.main-bn .bg.bg1{background-image:url(../images/common/img_main_bg.webp); animation-delay:0s;}
+.inner-wrap.main-bn .bg.bg2{background-image:url(../images/common/img_main_bg02.webp); animation-delay:4s;}
+.inner-wrap.main-bn .bg.bg3{background-image:url(../images/common/img_main_bg03.webp); animation-delay:8s;}
+
+@keyframes fadeSlide{
+    0% { opacity: 0; }
+    10% { opacity: 1; }   /* 1.2초 동안 서서히 등장 */
+    30% { opacity: 1; }   /* 2.4초 동안 유지 */
+    40% { opacity: 0; }   /* 1.2초 동안 서서히 사라짐 */
+    100% { opacity: 0; }
+}
+
 
 .inner-wrap.main-bn .img-boy{display:block; position:absolute; right:-5.5rem; bottom:-8rem; width:36.2rem; scale:.7; z-index:1; pointer-events:none;}
 
 .inner-wrap.main-bn .h2-title{margin-left:auto; padding-top:5rem; line-height:130%; font-size:6rem; letter-spacing:-1rem; font-family:var(--ff-mono); background:url(../images/common/icon_recycle.svg) left 34rem top no-repeat;}
 .inner-wrap.main-bn .h2-title .toggle-grp{display:flex; overflow:hidden; height:4rem; margin-top:2rem; font-size:2rem; font-family:var(--ff-noto); background:rgba(0, 0, 0, 0.8); border-radius:2rem; border:.1rem solid #009BB4;}
 .inner-wrap.main-bn .h2-title .toggle-grp span{display:inline-block; width:100%; height:100%; color:#009BB4; font-weight:500; line-height:3.8rem; text-align:center; letter-spacing:0;}
+.inner-wrap.main-bn .h2-title .toggle-grp span:first-child{max-width:30rem;}
 .inner-wrap.main-bn .h2-title .toggle-grp span.on{color:#fff; font-weight:700; background:#009BB4;}
 
 .slide-bn.swiper{width:144.5rem; margin-top:auto; margin-right:unset; padding-bottom:7rem;}
