--- a/css/content.css
+++ b/css/content.css
@@ -23,7 +23,6 @@
     100% { opacity: 0; }
 }
 
-
 .inner-wrap.main-bn .img-boy{display:block; position:absolute; right:-5.5rem; bottom:-8rem; width:36.2rem; scale:.7; z-index:1; pointer-events:none;}
 
 .inner-wrap.main-bn .h2-title{margin-left:auto; padding-top:5rem; line-height:130%; font-size:6rem; letter-spacing:-1rem; font-family:var(--ff-mono); background:url(../images/common/icon_recycle.svg) left 34rem top no-repeat;}
@@ -116,14 +115,61 @@
 .btn-noti-bn .txt{width:100%;}
 .btn-noti-bn .badge{display:inline-flex; align-items:center; font-weight:400; margin-top:1.4rem; padding:.3rem 2.5rem; font-size:1.4rem; line-height:2.4rem; font-family:var(--ff-default); letter-spacing:0; border:.1rem solid #fff; border-radius:1.5rem;}
 
+.sub .inner-wrap{padding:0;}
+.inner-wrap .h2-title{font-weight:500; font-size:6rem;}
+.inner-wrap .h2-title + .tab-container.sub{padding-top:8.5rem;}
 
 
+/* tab */
+.tab-container.sub{position:relative;}
+.tab-container.sub .tab-head{display:flex; gap:6rem; border-bottom:.1rem solid #9C9C9C;}
+.tab-container.sub .tab-head .tab-menu{position:relative; padding-bottom:2rem; color:#9C9C9C; font-weight:500; font-size:2rem; transition:all .3s ease;}
+.tab-container.sub .tab-head .tab-menu.is-active,
+.tab-container.sub .tab-head .tab-menu:hover{color:#009BB4; font-weight:700;}
+.tab-container.sub .tab-head .tab-menu.is-active::after,
+.tab-container.sub .tab-head .tab-menu::after{content:''; display:block; position:absolute; bottom:0; height:.5rem; background:#009BB4; transition:all .3s ease;}
+.tab-container.sub .tab-head .tab-menu::after{width:0;}
+.tab-container.sub .tab-head .tab-menu:hover::after,
+.tab-container.sub .tab-head .tab-menu.is-active::after{width:100%;}
+.tab-container.sub .tab-head + .tab-content-wrap{margin-top:5rem;}
+
+.tab-container.sub .tab-content{display:none;}
+.tab-container.sub .tab-content.is-active{display:block;}
+.tab-container.sub .tab-content p{font-size:2rem;}
+.tab-container.sub .tab-content .info-txt{font-weight:500; line-height:160%;}
+.tab-container.sub .tab-content .info-txt + .acco-wrap{margin-top:3.6rem;}
+
+.tab-container.sub.has-img{background:url(/images/common/icon_tab_gril.webp) right top 1.3rem / 32.3rem 26.4rem no-repeat;}
+.tab-container.sub.has-img .tab-head{width:65%;}
+
+
+.acco-wrap .list li{position:relative; background:#fff; border-radius:2rem;}
+.acco-wrap .list li + li{margin-top:1rem;}
+.acco-wrap .list li > .btn-acco{display:flex; gap:2.7rem; align-items:center; width:100%; padding:3rem 4rem;}
+.acco-wrap .list li .badge{display:inline-block; height:3.6rem; padding:.2rem 1.8rem; color:#fff; font-weight:500; line-height:160%; font-size:2rem; background:#9C9C9C; border-radius:1.8rem;}
+.acco-wrap .list li .tit{font-weight:700; line-height:160%; font-size:3rem;}
+.acco-wrap .list li .icon-arrow{display:inline-block; position:absolute; top:4.9rem; right:4rem;  width:2rem; height:1.2rem; background:url(../images/common/icon_bbs_arrow.svg) center center / 100% no-repeat;}
+
+.acco-wrap .list-answer{display:none; padding:0 4rem 7rem;}
+.bg-box{display:flex; gap:8rem; align-items:center; padding:2.7rem 5rem; background:rgba(227, 229, 234, 0.5); border-radius:1rem;}
+.bg-box dt{color:#009BB4; font-weight:700; font-size:1.6rem;}
+.bg-box dd{position:relative; font-weight:400; font-size:2rem;}
+.bg-box dd::before{content:''; display:inline-block; position:absolute; top:0; left:-4rem; width:.1rem; height:2.6rem; background:rgba(128, 129, 131, 0.5);}
+.acco-wrap .bg-box + .list-txt{margin-top:4rem;}
+.list-txt + .list-txt{margin-top:2rem;}
+.list-txt{display:flex;}
+.list-txt dt{flex:0 0 auto; width:17rem; font-weight:700; line-height:120%; font-size:2.4rem;}
+.list-txt dd{flex-grow:1; line-height:160%; font-size:2rem;}
+
+.acco-wrap .list li.on .list-answer{display:block}
+.acco-wrap .list li.on .badge{background:#003B90;}
+.acco-wrap .list li.on .icon-arrow{transform:rotate(180deg);}
 
 .footer-banner-slider, .footer-cont{padding-left:2rem; padding-right:2rem;}
 
 
-
-
+.bullet{position:relative; padding-left:1.5rem;}
+.bullet::before{content:''; display:inline-block; position:absolute; top:1.4rem; left:0; width:.5rem; height:.5rem; background:#000; border-radius:50%;}
 
 @media(max-width:1400px){
 
