--- a/css/content.css
+++ b/css/content.css
@@ -132,24 +132,19 @@
 .tab-container.sub .tab-head .tab-menu:hover::after,
 .tab-container.sub .tab-head .tab-menu.is-active::after{width:100%;}
 .tab-container.sub .tab-head + .tab-content-wrap{margin-top:5rem;}
-
-.tab-container.sub .tab-content{display:none;}
+.tab-container.sub .tab-content{display:none; min-height:30rem;}
 .tab-container.sub .tab-content.is-active{display:block;}
 .tab-container.sub .tab-content p{font-size:2rem;}
 .tab-container.sub .tab-content .info-txt{font-weight:500; line-height:160%;}
 .tab-container.sub .tab-content .info-txt + .acco-wrap{margin-top:3.6rem;}
-
 .tab-container.sub.has-img{background:url(/images/common/icon_tab_gril.webp) right top 1.3rem / 32.3rem 26.4rem no-repeat;}
 .tab-container.sub.has-img .tab-head{width:65%;}
-
-
 .acco-wrap .list li{position:relative; background:#fff; border-radius:2rem;}
 .acco-wrap .list li + li{margin-top:1rem;}
 .acco-wrap .list li > .btn-acco{display:flex; gap:2.7rem; align-items:center; width:100%; padding:3rem 4rem;}
 .acco-wrap .list li .badge{display:inline-block; height:3.6rem; padding:.2rem 1.8rem; color:#fff; font-weight:500; line-height:160%; font-size:2rem; background:#9C9C9C; border-radius:1.8rem;}
 .acco-wrap .list li .tit{font-weight:700; line-height:160%; font-size:3rem;}
 .acco-wrap .list li .icon-arrow{display:inline-block; position:absolute; top:4.9rem; right:4rem;  width:2rem; height:1.2rem; background:url(../images/common/icon_bbs_arrow.svg) center center / 100% no-repeat;}
-
 .acco-wrap .list-answer{display:none; padding:0 4rem 7rem;}
 .bg-box{display:flex; gap:8rem; align-items:center; padding:2.7rem 5rem; background:rgba(227, 229, 234, 0.5); border-radius:1rem;}
 .bg-box dt{color:#009BB4; font-weight:700; font-size:1.6rem;}
@@ -165,9 +160,15 @@
 .acco-wrap .list li.on .badge{background:#003B90;}
 .acco-wrap .list li.on .icon-arrow{transform:rotate(180deg);}
 
-.footer-banner-slider, .footer-cont{padding-left:2rem; padding-right:2rem;}
 
 
+
+
+
+
+
+
+/* etc */
 .bullet{position:relative; padding-left:1.5rem;}
 .bullet::before{content:''; display:inline-block; position:absolute; top:1.4rem; left:0; width:.5rem; height:.5rem; background:#000; border-radius:50%;}
 
