--- a/css/content.css
+++ b/css/content.css
@@ -160,7 +160,7 @@
 .acco-wrap .list li.on .badge{background:#003B90;}
 .acco-wrap .list li.on .icon-arrow{transform:rotate(180deg);}
 
-
+.gen-list.sidewalk{}
 
 
 
