--- a/css/reset.css
+++ b/css/reset.css
@@ -493,8 +493,10 @@ input::placeholder{color:#6C6C6C;}
     --font-size-60: 6rem;
     --pd-0-9: 0 9rem;
     --layout-max-width: 192rem;
-    --bg-gray:#5D5D5D;
     --ff-default:"Pretendard";
     --ff-noto:"Noto Sans";
     --ff-mono:"Monoplex KR Nerd";
+    --primary-color: #034EA1;
+    --normal-color:#f5f5f5;
+    --bg-gray:#f2f4f6;
 }
