--- a/css/content.css
+++ b/css/content.css
@@ -165,6 +165,7 @@
 .search-area .btn{height:5.2rem; gap:1rem; font-size:2rem;}
 .search-area .search-ipt{width:38rem;}
 .search-area .ico-search{width:1.8rem; height:1.8rem;}
+.search-area + .page-list{margin-top:5rem;}
 
 /* page-list */
 .page-list{display:flex; gap:.5rem; justify-content:center; align-items:center; margin-top:4rem;}
@@ -188,12 +189,34 @@
 .page-list .num-list.pc-only{display:flex;}
 .page-list .count-grp.mo-only{display:none;}
 
-.gen-list.sidewalk{}
+.h2-title + .inner{margin-top:5rem;}
 
+.bbs-gen-list li + li{margin-top:1.6rem;}
+.bbs-gen-list li > a{display:flex; overflow:hidden; background:#fff; border-radius:2rem;}
+.bbs-gen-list + .search-area{justify-content:center; margin-top:4rem;}
 
+.news .bbs-gen-list li > a{height:20rem;}
+.news .bbs-gen-list li .img-grp{flex:0 0 auto; width:30.8rem; height:100%;}
+.news .bbs-gen-list li .img-grp img{display:block; width:100%;}
+.news .bbs-gen-list li .txt-grp{padding:3rem 4rem;}
+.news .bbs-gen-list li .txt-grp .tit{display:block; font-weight:700; line-height:3rem; font-size:2.4rem;}
+.news .bbs-gen-list li .txt-grp .txt{display:-webkit-box; overflow:hidden; color:#6E6E6E; font-weight:400; line-height:140%; font-size:1.8rem; text-overflow:ellipsis; -webkit-box-orient:vertical; -webkit-line-clamp:2;}
+.news .bbs-gen-list li .txt-grp .date{display:block; color:#6E6E6E; font-weight:400; line-height:2.4rem; font-size:1.8rem;}
 
+.news .bbs-gen-list li .txt-grp .tit + .txt{margin-top:1rem;}
+.news .bbs-gen-list li .txt-grp .txt + .date{margin-top:2.4rem;}
 
-
+.bbs-view{padding:8rem 6rem 7rem; background:#fff; border-radius:2rem;}
+.bbs-view .tit-grp{padding-bottom:2rem; border-bottom:.1rem solid #A6A8AB;}
+.bbs-view .tit-grp .tit{display:block; font-weight:700; font-size:3.6rem; text-align:center;}
+.bbs-view .tit-grp .tit + .date-grp{margin-top:3rem;}
+.bbs-view .tit-grp .date-grp{display:block; text-align:center;}
+.bbs-view .tit-grp .date-grp .date{color:#6E6E6E; font-weight:400; line-height:2.4rem; font-size:1.8rem;}
+.bbs-view .txt-grp{margin-top:6rem;}
+.bbs-view .txt-grp .contents img{display:block; max-width:100%; margin:0 auto;}
+.bbs-view .txt-grp .contents img + p{margin-top:6rem;}
+.bbs-view .txt-grp .contents p{font-weight:400; line-height:160%; font-size:1.8rem;}
+.bbs-view + .btn-area{margin-top:4rem; text-align:center;}
 
 /* etc */
 .bullet{position:relative; padding-left:1.5rem;}
@@ -225,10 +248,23 @@
     .page-list > .btn-paging.pc-only{display:none;}
     .page-list > .btn-paging.mo-only{display:inline-flex;}
     
+    .content-wrap.sub{margin-top:7rem;}
+    .inner-wrap .h2-title{font-size:3.8rem;}
+    .h2-title + .inner{margin-top:2.4rem;}
+    
+    .bbs-view{padding:2.5rem 1.6rem;}
+    .bbs-view + .btn-area .btn{width:100%;}
+
 }   
 
 @media(max-width:768px){
-    
+    .bbs-gen-list li > a{flex-wrap:wrap;}
+    .news .bbs-gen-list li > a{height:auto;}
+    .news .bbs-gen-list li .img-grp{width:100%;}
+
+
+
+
 }
 
 
